# datalad-runcmd

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/datalad_runcmd/: __init__.py  __main__.py  cli.py  config.py  dl_command.py  extract.py  resolve.py
tests/: conftest.py  test_cli.py  test_extract.py  test_resolve.py
